Add pygment style CSS

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -9,6 +9,8 @@
 {% else %}
 <link href="{% static 'base/css/style.css' %}" rel="stylesheet" media="screen">
 {% endif %}
+<link href="{% static '3rdparty/pygments/css/github.css' %}"
+  rel="stylesheet" media="screen">
 {% endblock %}
 
 {% block extra_header %}
