I hate the bright red code and Courier New

--- a/base/static/base/less/site.less
+++ b/base/static/base/less/site.less
@@ -1,11 +1,11 @@
 // TYPOGRAPHY
 // -----------------------
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 16px;
 }
 .heading {
-    font-family: 'Open Sans Condensed', sans-serif;
+    font-family: "Open Sans Condensed", sans-serif;
 }
 h1, h2, h3, h4, ul.pager {
     .heading;
@@ -18,6 +18,10 @@ h1, h2, h3, h4, ul.pager {
 }
 p {
     margin: 0 0 1em;
+}
+code, pre {
+    color: inherit;
+    font-family: "Monaco", "Menlo", "Consolas", "DejaVu Sans Mono", monospace;
 }
 blockquote p {
     font-size: 16px;
