--- a/base/static/base/css/style.css
+++ b/base/static/base/css/style.css
@@ -1,16 +1,16 @@
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 16px;
 }
 .heading {
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
 }
 h1,
 h2,
 h3,
 h4,
 ul.pager {
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
   text-transform: uppercase;
   font-weight: 700 !important;
 }
@@ -23,6 +23,11 @@ ul.pager code {
 }
 p {
   margin: 0 0 1em;
+}
+code,
+pre {
+  color: inherit;
+  font-family: "Monaco", "Menlo", "Consolas", "DejaVu Sans Mono", monospace;
 }
 blockquote p {
   font-size: 16px;
@@ -190,7 +195,7 @@ body,
 }
 .row.top .col-right nav .list-inline li a {
   display: block;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
   font-weight: bold;
   text-transform: uppercase;
   color: #333333;
@@ -337,7 +342,7 @@ body,
   text-align: center;
 }
 .row.bottom .col-right .item-choice a {
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
   font-size: 16px;
   font-weight: 300;
   color: #808080;
@@ -384,7 +389,7 @@ body,
   border: none;
   background: #e6e6e6;
   font-size: 24px;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
 }
 .row.bottom .col-right .load-more:hover {
   background: #f7f7f7;
