--- a/ghostdown/templates/ghostdown/includes/editor.html
+++ b/ghostdown/templates/ghostdown/includes/editor.html
@@ -1,22 +1,25 @@
 {% load i18n %}
 
 <a id="ghostdown_editor_trigger" href="#">{% trans 'Open editor' %}</a>
+{{ original|safe }}
 
-<div id="ghostdown_editor_dialog" class="features">
-  <section class="editor">
-    <div class="outer">
-      <div class="editorwrap">
-        <section class="entry-markdown">
-          <section class="entry-markdown-content">
-            {{ textarea|safe }}
+<div id="ghostdown_editor_dialog">
+  <div class="features">
+    <section class="editor">
+      <div class="outer">
+        <div class="editorwrap">
+          <section class="entry-markdown">
+            <section class="entry-markdown-content">
+              <textarea id="entry-markdown">{{ content }}</textarea>
+            </section>
           </section>
-        </section>
-        <section class="entry-preview active">
-          <section class="entry-preview-content">
-            <div class="rendered-markdown"></div>
+          <section class="entry-preview active">
+            <section class="entry-preview-content">
+              <div class="rendered-markdown"></div>
+            </section>
           </section>
-        </section>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </div>
 </div>
