Temporarily disable preview until CSS is fixed

--- a/ghostdown/templates/ghostdown/includes/editor.html
+++ b/ghostdown/templates/ghostdown/includes/editor.html
@@ -8,12 +8,12 @@
     <section class="editor">
       <div class="outer">
         <div class="editorwrap">
-          <section class="entry-markdown">
+          <section class="entry-markdown" style="width: 100%;">
             <section class="entry-markdown-content">
               <textarea id="entry-markdown">{{ content }}</textarea>
             </section>
           </section>
-          <section class="entry-preview active">
+          <section class="entry-preview active" style="display: none;">
             <section class="entry-preview-content">
               <div class="rendered-markdown"></div>
             </section>
