--- a/blog/templates/blog/includes/post_content.html
+++ b/blog/templates/blog/includes/post_content.html
@@ -28,14 +28,14 @@
 <!--navigation-->
 {% with previous=post.previous next=post.next %}
 <ul class="pager">
-  <li class="previous{% if not previous %} disabled{% endif %}">
-    <a href="{% if previous %}{{ previous.get_absolute_url }}{% else %}#{% endif %}">
-      &lt; {% trans 'Prev' %}
-    </a>
-  </li>
   <li class="next{% if not next %} disabled{% endif %}">
     <a href="{% if next %}{{ next.get_absolute_url }}{% else %}#{% endif %}">
-      {% trans 'Next' %} &gt;
+      &lt; {% trans 'Next' %}
+    </a>
+  </li>
+  <li class="previous{% if not previous %} disabled{% endif %}">
+    <a href="{% if previous %}{{ previous.get_absolute_url }}{% else %}#{% endif %}">
+      {% trans 'Prev' %} &gt;
     </a>
   </li>
 </ul>
