--- a/blog/templates/blog/includes/post_content.html
+++ b/blog/templates/blog/includes/post_content.html
@@ -28,12 +28,12 @@
 <!--navigation-->
 {% with previous=post.previous next=post.next %}
 <ul class="pager">
-  <li class="next{% if not next %} disabled{% endif %}">
+  <li class="previous{% if not next %} disabled{% endif %}">
     <a href="{% if next %}{{ next.get_absolute_url }}{% else %}#{% endif %}">
       &lt; {% trans 'Next' %}
     </a>
   </li>
-  <li class="previous{% if not previous %} disabled{% endif %}">
+  <li class="next{% if not previous %} disabled{% endif %}">
     <a href="{% if previous %}{{ previous.get_absolute_url }}{% else %}#{% endif %}">
       {% trans 'Prev' %} &gt;
     </a>
