--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -4,5 +4,6 @@
 
 {% block extra_css %}
 {{ block.super }}
-<link href="{% static 'pages/css/index.css' %}" rel="stylesheet" media="screen">
+<link href="{% static 'pages/css/index.css' %}"
+    charset="utf-8" media="screen" rel="stylesheet" type="text/css">
 {% endblock %}
