--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -1,6 +1,6 @@
 {% extends 'base/boilerplate.html' %}
 
-{% load i18n static base_tags %}
+{% load i18n staticfiles base_tags %}
 
 {% block extra_css %}
 {{ block.super }}
