--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 
-{% load i18n static compress base_tags blog_tags %}
+{% load i18n staticfiles compress base_tags blog_tags %}
 
 {% block title %}{{ post.title }}{% endblock %}
 
