--- a/pages/templates/pages/includes/index_sidebar.html
+++ b/pages/templates/pages/includes/index_sidebar.html
@@ -1,6 +1,6 @@
 {% extends 'pages/includes/sidebar.html' %}
 
-{% load i18n static %}
+{% load i18n staticfiles %}
 
 {% block sidebar_items %}
 <section>
