--- a/base/templates/admin/base.html
+++ b/base/templates/admin/base.html
@@ -1,6 +1,6 @@
 {% extends 'admin/base_.html' %}
 
-{% load static %}
+{% load staticfiles %}
 
 {% block extrahead %}
 <link rel="icon" type="image/png" href="{% static 'base/img/favicon.png' %}">
