--- a/pages/templates/pages/work.html
+++ b/pages/templates/pages/work.html
@@ -1,6 +1,6 @@
 {% extends 'pages/page.html' %}
 
-{% load static base_tags work_tags %}
+{% load staticfiles base_tags works_tags %}
 
 {% block sidebar_content %}
 {% work_sidebar %}
