Add MathJax CDN

--- a/base/templates/base/boilerplate.html
+++ b/base/templates/base/boilerplate.html
@@ -34,6 +34,7 @@
 {% block body %}{% endblock %}
 
 {% compress js %}
+<script src="path-to-MathJax/MathJax.js?config=TeX-AMS_HTML"></script>
 <script src="{% static '3rdparty/underscore/js/underscore.js' %}"></script>
 <script src="{% static JQUERY_URL %}"></script>
 <script src="{% static '3rdparty/fastclick/js/fastclick.js' %}"></script>
