Fix MathJax color problem caused by pygment theme

--- a/base/static/base/less/site.less
+++ b/base/static/base/less/site.less
@@ -622,3 +622,10 @@ html, body, .container {
     }
 }
 
+
+// Mathjax (fixing class name comflicts with Pygments)
+.MathJax {
+    span {
+        color: inherit;
+    }
+}
