--- a/blog/static/blog/css/sidebar.css
+++ b/blog/static/blog/css/sidebar.css
@@ -22,6 +22,6 @@
 .row.bottom .col-right section .media {
     padding: 20px;
 }
-.sidebar-grid {
+.row.bottom .col-right .sidebar-grid {
     padding-top: 0;
 }
