--- a/base/templates/base/includes/disqus.html
+++ b/base/templates/base/includes/disqus.html
@@ -1,14 +1,25 @@
  <div id="disqus_thread"></div>
+
 <script type="text/javascript">
-var disqus_shortname = 'uranusjr';
+var disqus_shortname = 'smallerlog';
 var disqus_identifier = '{{ unique_id }}';
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
-  var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+  var dsq = document.createElement('script');
+  dsq.type = 'text/javascript';
+  dsq.async = true;
   dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+  (document.getElementsByTagName('head')[0] ||
+   document.getElementsByTagName('body')[0]).appendChild(dsq);
 })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
+<noscript>
+  Please enable JavaScript to view the
+  <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+</noscript>
+
+<a href="http://disqus.com" class="dsq-brlink">
+  comments powered by <span class="logo-disqus">Disqus</span>
+</a>
