--- a/base/templates/base/includes/disqus.html
+++ b/base/templates/base/includes/disqus.html
@@ -1,7 +1,7 @@
  <div id="disqus_thread"></div>
 
 <script type="text/javascript">
-var disqus_shortname = 'smallerlog';
+var disqus_shortname = 'smallerlogs';
 var disqus_identifier = '{{ unique_id }}';
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
