Template syntax fix

--- a/base/templates/base/boilerplate.html
+++ b/base/templates/base/boilerplate.html
@@ -13,7 +13,7 @@
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <meta propery="og-image"
-    content="{{ block og_image }}{% static 'base/img/uranusjr.png' %}{{ endblock }}">
+    content="{% block og_image %}{% static 'base/img/uranusjr.png' %}{% endblock %}">
 
 {% compress css %}
 <link href="{% static '3rdparty/bootstrap/css/bootstrap.min.css' %}"
