--- a/base/templates/base/boilerplate.html
+++ b/base/templates/base/boilerplate.html
@@ -12,7 +12,7 @@
 <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<meta propery="og:image"
+<meta property="og:image"
     content="{% block og_image %}{% static 'base/img/uranus.png' %}{% endblock %}">
 
 {% compress css %}
