Automatically scroll sidebar to show current entry

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -46,7 +46,7 @@ ga('send', 'pageview');
         </a>
       </div>
     </div>
-    <div class="col-lg-4 col-md-4 col-sm-5 col-right">
+    <div id="header_right" class="col-lg-4 col-md-4 col-sm-5 col-right">
       {% sidebar_tabs %}
     </div>
   </div>
@@ -65,7 +65,7 @@ ga('send', 'pageview');
       {% endblock %}
 
     </div>
-    <div class="col-lg-4 col-md-4 col-sm-5 col-right">
+    <div id="content_sidebar" class="col-lg-4 col-md-4 col-sm-5 col-right">
       <div id="scroll-shadow"></div>
 
       {% block sidebar %}
