Auto scrolls after more sidebar entries are loaded

--- a/blog/templates/blog/includes/sidebar_post_tmpl.html
+++ b/blog/templates/blog/includes/sidebar_post_tmpl.html
@@ -1,4 +1,4 @@
-<a href="<%= post.url %>">
+<a href="<%= post.url %>" class="media-href">
   <div data-id="<%= post.id %>"
       class="media mix <%= active %> <%= post.category.slug %> <%= tag_slugs.join(' ') %>">
     <!-- <img class="media-object" alt="miniature-article"
