Apply media="all" to CSS links

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -5,5 +5,5 @@
 {% block extra_css %}
 {{ block.super }}
 <link href="{% static 'pages/css/index.css' %}"
-    charset="utf-8" media="screen" rel="stylesheet" type="text/css">
+    charset="utf-8" media="all" rel="stylesheet" type="text/css">
 {% endblock %}
