--- a/base/static/markitup/templates/preview.html
+++ b/base/static/markitup/templates/preview.html
@@ -3,8 +3,8 @@
 
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" media="screen"
- href="/static/3rdparty/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" media="all"
+  href="/static/3rdparty/bootstrap/css/bootstrap.min.css">
 </head>
 
 <body>
