--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -6,18 +6,18 @@
 {{ block.super }}
 {% if LESS_DEBUG %}
 <link href="{% static 'base/less/import.less' %}"
-    charset="utf-8" media="screen" rel="stylesheet" type="text/less">
+    charset="utf-8" media="all" rel="stylesheet" type="text/less">
 {% else %}
 <link href="{% static 'base/css/style.css' %}"
-    charset="utf-8" media="screen" rel="stylesheet" type="text/css">
+    charset="utf-8" media="all" rel="stylesheet" type="text/css">
 {% endif %}
 <link href="{% static '3rdparty/pygments/css/github.css' %}"
-    charset="utf-8" media="screen" rel="stylesheet" type="text/css">
+    charset="utf-8" media="all" rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block extra_header %}
-<link href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic|Open+Sans+Condensed:300,700|Pacifico"
-  rel="stylesheet" media="screen" type="text/css">
+<link href="//fonts.googleapis.com/css?family=Lato:300,400,400italic|Open+Sans+Condensed:300,700|Pacifico"
+  rel="stylesheet" media="all" type="text/css">
 {% if LESS_DEBUG %}
 <script src="{% static '3rdparty/less/js/less-1.5.1.min.js' %}"></script>
 {% endif %}
