--- a/base/templates/base/includes/stylesheets.html
+++ b/base/templates/base/includes/stylesheets.html
@@ -1,4 +1,4 @@
 {% for file in files %}
 <link href="{{ file.target.url }}"
-    charset="utf-8" media="screen" rel="stylesheet" type="text/css">
+    charset="utf-8" media="all" rel="stylesheet" type="text/css">
 {% endfor %}
