Add a spinner effect for blog sidebar

--- a/base/templates/base/boilerplate.html
+++ b/base/templates/base/boilerplate.html
@@ -40,9 +40,11 @@
 
 <script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
 {% compress js %}
+<script src="{% static '3rdparty/fastclick/js/fastclick.js' %}"></script>
+<script src="{% static '3rdparty/spin/js/spin.min.js' %}"></script>
 <script src="{% static '3rdparty/underscore/js/underscore.js' %}"></script>
 <script src="{% static JQUERY_URL %}"></script>
-<script src="{% static '3rdparty/fastclick/js/fastclick.js' %}"></script>
+<script src="{% static '3rdparty/bootstrap/js/bootstrap.min.js' %}"></script>
 <script src="{% static '3rdparty/smooth-scroll/js/jquery.smooth-scroll.min.js' %}"></script>
 <script src="{% static '3rdparty/mixitup/js/jquery.mixitup.min.js' %}"></script>
 
