Fix bug where "load more" text does not hide

--- a/blog/templates/blog/includes/sidebar.html
+++ b/blog/templates/blog/includes/sidebar.html
@@ -17,7 +17,7 @@
   <a href="#" class="btn btn-default btn-lg btn-block load-more"
       style="display: none;" data-action="after" data-method="prepend"
       data-anchor="0" data-direction="">
-    {% trans 'Load more' %}
+    <span class="text">{% trans 'Load more' %}</span>
   </a>
   <section class="blog"></section>
   <a href="#" class="btn btn-default btn-lg btn-block load-more"
