Refresh code mirror editor on show

--- a/base/templates/base/includes/ghostdown_editor.html
+++ b/base/templates/base/includes/ghostdown_editor.html
@@ -44,6 +44,7 @@
         .dialog('open')
         .dialog('option', 'height', $(window).height() * 0.8)
         .dialog('option', 'width', $(window).width() * 0.9);
+      editor.refresh();
     });
   });
 }(grp.jQuery, CodeMirror));
