--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,12 +2,12 @@
 
 {% load i18n %}
 
-{% block obj_content %}
+{% block obj_block %}
 <div data-id="{{ obj.pk }}" class="media">
   <div class="media-body">
-    <h3 class="media-heading">
+    <h2 class="media-heading">
       <a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a>
-    </h3>
+    </h2>
     <p class="article-date">{{ obj.published_at|date:'Y-m-d' }}</p>
     <p class="article-tags">
       <a href="{{ obj.category.get_absolute_url }}">{{ obj.category.title }}</a>
