--- a/blog/templates/blog/includes/post_content.html
+++ b/blog/templates/blog/includes/post_content.html
@@ -27,7 +27,7 @@
 
 <!--navigation-->
 {% with previous=post.previous next=post.next %}
-<ul class="pager">
+<ul class="pager post-pager">
 
   {% if next %}
   <li class="previous">
