Add default sidebar icon for pages

--- a/pages/templates/pages/includes/sidebar.html
+++ b/pages/templates/pages/includes/sidebar.html
@@ -8,7 +8,7 @@
       <div class="panel-heading">
         <a href="{{ page.get_absolute_url }}">
           <img class="img-responsive item-img" alt="{{ page.title }}"
-            src="{{ page.image.url }}">
+            src="{{ page.get_icon_url }}">
         </a>
       </div>
       <div class="panel-body">
