Remove obsolete charset attr

--- a/base/templates/base/boilerplate.html
+++ b/base/templates/base/boilerplate.html
@@ -19,7 +19,7 @@
 
 {% compress css %}
 <link href="{% static '3rdparty/bootstrap/css/bootstrap.min.css' %}"
-    charset="utf-8" media="all" rel="stylesheet" type="text/css">
+    media="all" rel="stylesheet" type="text/css">
 {% block extra_css %}{% endblock %}
 {% endcompress %}
 
