--- a/base/templates/base/displayable_list.html
+++ b/base/templates/base/displayable_list.html
@@ -5,7 +5,7 @@
 {% block extra_css %}
 {{ block.super }}
 <link href="{% static 'base/css/displayable_list.css' %}"
-    charset="utf-8" media="all" rel="stylesheet" type="text/css">
+    media="all" rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block content_main %}
