--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -6,13 +6,13 @@
 {{ block.super }}
 {% if LESS_DEBUG %}
 <link href="{% static 'base/less/import.less' %}"
-    charset="utf-8" media="all" rel="stylesheet" type="text/less">
+    media="all" rel="stylesheet" type="text/less">
 {% else %}
 <link href="{% static 'base/css/style.css' %}"
-    charset="utf-8" media="all" rel="stylesheet" type="text/css">
+    media="all" rel="stylesheet" type="text/css">
 {% endif %}
 <link href="{% static '3rdparty/pygments/css/github.css' %}"
-    charset="utf-8" media="all" rel="stylesheet" type="text/css">
+    media="all" rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block extra_header %}
