--- a/base/templates/base/includes/stylesheets.html
+++ b/base/templates/base/includes/stylesheets.html
@@ -1,4 +1,3 @@
 {% for file in files %}
-<link href="{{ file.target.url }}"
-    charset="utf-8" media="all" rel="stylesheet" type="text/css">
+<link href="{{ file.target.url }}" media="all" rel="stylesheet" type="text/css">
 {% endfor %}
