--- a/talks/templates/talks/talk_list.html
+++ b/talks/templates/talks/talk_list.html
@@ -4,8 +4,8 @@
 
 {% block extra_css %}
 {{ block.super }}
-<link rel="stylesheet" href="{% static 'talks/css/talk_list.css' %}"
-    charset="utf-8" media="all" rel="stylesheet" type="text/css">
+<link href="{% static 'talks/css/talk_list.css' %}"
+    media="all" rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block obj_block %}
