--- a/talks/templates/talks/talk_list.html
+++ b/talks/templates/talks/talk_list.html
@@ -12,13 +12,13 @@
 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
   <div class="panel panel-default item">
     <div class="panel-heading">
-      <a href="{{ obj.url }}">
+      <a href="{{ obj.url }}" target="_blank">
         <img class="img-responsive item-img" alt="{{ obj.title }}"
           src="{{ obj.image_url }}">
       </a>
     </div>
     <div class="panel-body">
-      <a href="{{ obj.url }}">
+      <a href="{{ obj.url }}" target="_blank">
         <h3 class="item-title">{{ obj.title }}</h3>
       </a>
       <p class="item-tags">
