--- a/pages/templates/pages/includes/sidebar.html
+++ b/pages/templates/pages/includes/sidebar.html
@@ -14,6 +14,7 @@
       <div class="panel-body">
         <a href="{{ page.get_absolute_url }}">
           <h4 class="item-title">{{ page.title }}</h4>
+          <div class="item-description">{{ page.short_description }}</div>
         </a>
       </div>
     </div>
