Add missing target attr for talk block

--- a/talks/templates/talks/talk_list.html
+++ b/talks/templates/talks/talk_list.html
@@ -30,7 +30,7 @@
         {% endfor %}
       </p>
       <div class="item-description">
-        <a href="{{ obj.url }}">{{ obj.short_description }}</a>
+        <a href="{{ obj.url }}" target="_blank">{{ obj.short_description }}</a>
       </div>
     </div>
   </div>
