Fix translation tag in work page

--- a/pages/templates/pages/work.html
+++ b/pages/templates/pages/work.html
@@ -1,6 +1,6 @@
 {% extends 'pages/page.html' %}
 
-{% load staticfiles base_tags works_tags %}
+{% load i18n staticfiles base_tags works_tags %}
 
 {% block sidebar_title %}{% trans 'My Work' %}{% endblock %}
 
