--- a/pages/templates/pages/page.html
+++ b/pages/templates/pages/page.html
@@ -1,11 +1,13 @@
 {% extends 'base/base.html' %}
 
-{% load base_tags pages_tags %}
+{% load staticfiles base_tags pages_tags %}
 
 {% block title %}{{ page.title }}{% endblock %}
 
 {% block extra_css %}
 {{ block.super }}
+<link href="{% static 'pages/css/page.css' %}"
+    media="all" rel="stylesheet" type="text/css">
 {% stylesheets header page %}
 {% endblock %}
 
