--- a/base/static/base/less/site.less
+++ b/base/static/base/less/site.less
@@ -530,6 +530,12 @@ html, body, .container {
     }
     // Panel for WORK
     &.item {
+
+        &.standalone {
+            padding: 20px;
+            padding-bottom: 50px;
+        }
+
         border: none;
         a {
             color: @grey-5;
