--- a/base/static/base/css/style.css
+++ b/base/static/base/css/style.css
@@ -28,6 +28,8 @@ code,
 pre {
   color: inherit;
   font-family: "Monaco", "Menlo", "Consolas", "DejaVu Sans Mono", monospace;
+  overflow-x: scroll;
+  word-wrap: normal;    /* Override Bootstrap */
 }
 blockquote p {
   font-size: 16px;
