Only show pre/code scollbar when needed

--- a/base/static/base/css/style.css
+++ b/base/static/base/css/style.css
@@ -28,7 +28,7 @@ code,
 pre {
   color: inherit;
   font-family: "Monaco", "Menlo", "Consolas", "DejaVu Sans Mono", monospace;
-  overflow-x: scroll;
+  overflow-x: auto;
   word-wrap: normal;    /* Override Bootstrap */
 }
 blockquote p {
