Move overrides to LESS

--- a/base/static/base/less/site.less
+++ b/base/static/base/less/site.less
@@ -22,6 +22,9 @@ p {
 code, pre {
     color: inherit;
     font-family: "Monaco", "Menlo", "Consolas", "DejaVu Sans Mono", monospace;
+    overflow-x: auto;
+    word-wrap: normal;
+    white-space: pre;
 }
 blockquote p {
     font-size: 16px;
