Override left margin in list-inline
Bootstrap 3.1.1 adds left margin for .list-inline. We need to
cancel it in our custom nav bar.

Fix #30

--- a/base/static/base/css/style.css
+++ b/base/static/base/css/style.css
@@ -177,6 +177,7 @@ body,
   width: 100%;
   text-align: center;
   margin-bottom: 0;
+  margin-left: 0;
 }
 .row.top .col-right nav .list-inline li {
   display: table-cell;
