--- a/base/static/base/less/site.less
+++ b/base/static/base/less/site.less
@@ -190,6 +190,7 @@ html, body, .container {
                     width: 100%;
                     text-align: center;
                     margin-bottom: 0;
+                    margin-left: 0;
                     li {
                         display: table-cell;
                         padding: 0;
