--- a/base/templates/admin/base_.html
+++ b/base/templates/admin/base_.html
@@ -1,6 +1,6 @@
 {# Copied from grappelli/templates/admin/base.html to extend it #}
 
-{% load admin_static %}{% load url from future %}{% load i18n grp_tags %}
+{% load admin_static %}{% load firstof from future %}{% load i18n grp_tags %}
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE|default:"en-us" }}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
 <head>
@@ -9,7 +9,7 @@
     {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE" />{% endblock %}
     <!-- STYLESHEETS -->
     {% block stylesheets %}
-        <link href="{% static "grappelli/jquery/ui/css/custom-theme/jquery-ui-1.8.18.custom.css" %}" rel="stylesheet" type="text/css" media="screen" />
+        <link href="{% static "grappelli/jquery/ui/css/custom-theme/jquery-ui-1.10.3.custom.min.css" %}" rel="stylesheet" type="text/css" media="screen" />
         <link href="{% static "grappelli/stylesheets/screen.css" %}" rel="stylesheet" type="text/css" media="screen" />
         {% if LANGUAGE_BIDI %}
             <link href="{% static "grappelli/stylesheets/mueller/grid/output-rtl.css" %}" rel="stylesheet" type="text/css" media="screen" />
@@ -34,8 +34,8 @@
                 DATETIME_FORMAT = "{% get_datetime_format %}";
         </script>
         <!-- jQuery, jQuery-UI -->
-        <script src="{% static "grappelli/jquery/jquery-1.7.2.min.js" %}" type="text/javascript"></script>
-        <script src="{% static "grappelli/jquery/ui/js/jquery-ui-1.8.18.custom.min.js" %}" type="text/javascript"></script>
+        <script src="{% static "grappelli/jquery/jquery-1.9.1.min.js" %}" type="text/javascript"></script>
+        <script src="{% static "grappelli/jquery/ui/js/jquery-ui-1.10.3.custom.min.js" %}" type="text/javascript"></script>
         {% if debug %}
             <!-- Grappelli Main JS -->
             <script src="{% static "grappelli/js/grappelli.js" %}" type="text/javascript"></script>
@@ -81,7 +81,7 @@
                             {% block userlinks %}
                                 <!-- Username -->
                                 <li class="grp-user-options-container grp-collapse grp-closed {% if request.session.original_user %}grp-switch-user-is-target{% endif %}">
-                                    <a href="javascript://" class="user-options-handler grp-collapse-handler {% if request.session.original_user %}grp-switch-user-is-target{% else %}grp-switch-user-is-original{% endif %}">{% filter force_escape %}{% firstof user.first_name user.username user.get_short_name user.get_username %}{% endfilter %}</a>
+                                    <a href="javascript://" class="user-options-handler grp-collapse-handler {% if request.session.original_user %}grp-switch-user-is-target{% else %}grp-switch-user-is-original{% endif %}">{% firstof user.get_short_name user.get_username %}</a>
                                     <ul class="grp-user-options">
                                         <!-- Change Password -->
                                         {% if user.has_usable_password %}
@@ -133,6 +133,7 @@
             {% block messages %}
                 {% if messages %}
                     <ul class="grp-messagelist">
+                        <!-- NOTE: no message|capfirst by purpose, because it does not work in some languages -->
                         {% for message in messages %}
                             <li{% if message.tags %} class="grp-{{ message.tags }}"{% endif %}>{{ message }}</li>
                         {% endfor %}
