Fix styling for blog post tags

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,10 +10,7 @@
     </h2>
     <p class="article-date">{{ obj.published_at|date:'Y-m-d' }}</p>
     <p class="article-tags">
-      <a href="{{ obj.category.get_absolute_url }}">{{ obj.category.title }}</a>
-      {% for tag in obj.tags.all %}
-      , <a href="{{ tag.get_absolute_url }}">{{ tag.name }}</a>
-      {% endfor %}
+      <a href="{{ obj.category.get_absolute_url }}">{{ obj.category.title }}</a>{% for tag in obj.tags.all %}, <a href="{{ tag.get_absolute_url }}">{{ tag.name }}</a>{% endfor %}
     </p>
     <p class="article-description">{{ obj.short_description }}</p>
     <p class="read-more">
