--- a/blog/templates/blog/includes/post_content.html
+++ b/blog/templates/blog/includes/post_content.html
@@ -13,11 +13,7 @@
   <a href="{{ category.get_absolute_url }}">{{ category.title }}</a>
   {% endwith %}
   <br>
-  {% if post.tags.all %}{% trans 'Tags: ' %}{% endif %}
-  {% for tag in post.tags.all %}
-  <a href="{{ tag.get_absolute_url }}">{{ tag.name }}</a>
-  {% if not forloop.last %} ,{% endif %}
-  {% endfor %}
+  {% if post.tags.all %}{% trans 'Tags: ' %}{% endif %}{% for tag in post.tags.all %}<a href="{{ tag.get_absolute_url }}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}
 </p>
 
 <!--article content-->
