Convert to 1.8-style URL pattern list

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,7 +17,7 @@
 {{ block.super }}
 <link rel="alternate" type="application/atom+xml" href="{% url 'blog:posts_atom1' %}"
     title="{% trans 'Smaller Things from an Insignificant One' %}">
-<link rel="alternate" type="application/rss+xml" href="{% url 'blog:posts_rss201rev2' %}"
+<link rel="alternate" type="application/rss+xml" href="{% url 'blog:posts_rss201r2' %}"
     title="{% trans 'Smaller Things from an Insignificant One' %}">
 {% endblock %}
 
